# trimware-sw

./: .gitignore  .gitmodules  README.md  SETUP.md  flake.nix
device/tests/: CMakeLists.txt  Makefile  test_packet_handler.c
device/tests/unity/: CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: server_comms_protocol.md
driver-python/: driver.py  main.py  packet_handler.py  serial_packet_handler.py  test_packet_handler.py
driver-rust/: Cargo.toml
driver-rust/src/: device_select.rs  example.rs  freq.rs  main.rs  msfs_connect.rs  msfs_handler.rs  sim_freq.rs  sim_wrap.rs
server/: README.md  com_managment.py  serial_interface.py  sim_translator.py  simconnect_test.py
