[package]
name = "driver-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
msfs = {git  = "https://github.com/flybywiresim/msfs-rs.git" }
serialport = "4.7.0"
customCANProtocol = {path = "../device/target/libs/custom-can-protocol/packet-rust/"}


[target.wasm32-wasi]
rustflags = [
    "-Clink-arg=--export-table",
    "-Clink-arg=--export=malloc",
    "-Clink-arg=--export=free",
]
